--- a/demo-2/src/main/resources/templates/index.html
+++ b/demo-2/src/main/resources/templates/index.html
@@ -7,8 +7,16 @@
     <h1>Enter Command to Run on Router</h1>
     <form action="/run-command" method="post">
         <label for="command">Command:</label>
-        <input type="text" id="command" name="command" required>
+        <textarea id="command" name="command" rows="5" cols="50" required>configure terminal
+hostname siddu
+end
+write memory</textarea>
+        <br><br>
         <button type="submit">Run Command</button>
     </form>
+    
+    <div th:if="${error}">
+        <p style="color:red;" th:text="${error}"></p>
+    </div>
 </body>
 </html>
