--- a/demo-3/src/main/resources/templates/result.html
+++ b/demo-3/src/main/resources/templates/result.html
@@ -6,9 +6,7 @@
 <body>
     <h1>Command Output</h1>
     <pre th:text="${output}"></pre>
-    <div th:if="${error}">
-        <h2>Error</h2>
-        <p th:text="${error}"></p>
-    </div>
+    <br>
+    <a href="/">Run Another Command</a>
 </body>
 </html>
