--- a/configuration-management-service_1.2/src/main/resources/templates/index.html
+++ b/configuration-management-service_1.2/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Configuration Management</h1>
-    <form action="/router/change-hostname" method="get">
+    <form action="/router/change-hostname" method="post">
         <label for="newHostname">New Hostname:</label>
         <input type="text" id="newHostname" name="newHostname" required>
         <button type="submit">Change Hostname</button>
